delete entity alg
